--- a/.classpath
+++ b/.classpath
@@ -7,5 +7,6 @@
 	<classpathentry kind="lib" path="commons-io-2.5-javadoc.jar"/>
 	<classpathentry kind="lib" path="commons-io-2.5.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
+	<classpathentry kind="lib" path="Ivari.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
